[gd_scene load_steps=4 format=3 uid="uid://cp3n2dn4wmdgf"]

[ext_resource type="Texture2D" uid="uid://688vfsf84sa1" path="res://ui/screens/settings/assets/pencil.svg" id="1_k8tmn"]
[ext_resource type="Script" uid="uid://cle0mbatn21gu" path="res://ui/screens/settings/action_assignement_line.gd" id="1_orqn7"]
[ext_resource type="Texture2D" uid="uid://bsxrntxdmvsg8" path="res://ui_assets/game_icon/minus.png" id="3_orqn7"]

[node name="ActionAssignementLine" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 92.0
grow_horizontal = 2
size_flags_vertical = 0
script = ExtResource("1_orqn7")

[node name="Control" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="FakeLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="RebindButton" type="Button" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("1_k8tmn")
expand_icon = true

[node name="RemoveButton" type="Button" parent="."]
modulate = Color(1, 0, 0, 1)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("3_orqn7")
icon_alignment = 1
expand_icon = true
